feat: expand auth session management
